--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </header>
      
-  <div class="container home">
+  <div id = "test" class="container home">
     <header class="intro">
       <img src="img/fun-bus.jpg" alt="bus in the sand">
       <h2>Welcome To Fun Bus!</h2>
